appscluster/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  labels:
    topology: appscluster
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: website-allow-plaintext
  labels:
    topology: appscluster
spec:
  selector:
    matchLabels:
      app: website
  mtls:
    mode: PERMISSIVE
